<resources>
    <string name="app_name">SendMe</string>
    <string name="email">E-Mail</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="forgot_password">Forgot password</string>
    <string name="create_account">Create new account</string>
    <string name="full_name">Fullname</string>
    <string name="signup">Sign in</string>
    <string name="new_message">New message</string>
    <string name="to">To:</string>
    <string name="preferences">Preferences</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="active_status">Active status</string>
    <string name="accessibility">Accessibility</string>
    <string name="privacy_and_safety">Privacy and safety</string>
    <string name="notifications">Notifications</string>
    <string name="account">Account</string>
    <string name="log_out">Log out</string>
    <string name="delete_account">Delete account</string>
</resources>